# aigis

./: .editorconfig  .env  .env.example  .envrc  .gitattributes  .gitignore  .prettierignore  .python-version  .sqlfluff  .squawk.toml  Justfile  README.md  Tiltfile  bun-svelte.ts  bun.lockb  bun_setup.ts  bunfig.toml  catppuccin-plugin.vite.ts  codecov.yml  covfix.ts  css-tree-bun.patch  database.types.ts  deno.jsonc  drizzle.config.ts  eslint.config.js  flake.nix  happy-dom-fixed.ts  iconify-plugin.vite.ts  lcov-report.ts  matchers.d.ts  our-patch  package.json  patch.sh  preload.ts  pyproject.toml  renovate.json  reset.css  server.py  svelte-client.patch  svelte-css-processor.eslint.ts  (+6 more)
.github/actions/job-setup/: action.yml
.github/workflows/: ci.yml  coverage-report.yml  renovate.yml
database/: tool.nu
database/migrations/: 00001_dummy_migration.sql  00002_better_auth.sql
database/schema/: better-auth.sql  dummy.sql
nix/: pg-schema-diff.nix
src/: app.d.ts  app.html  hooks.server.ts  index.test.ts  stores.ts  vite-env.d.ts
src/aigis/: __init__.py  embeddings.py  test_1plus2.py  test_embeddings.py  test_something.py  test_utils.py  test_vector_stores.py  utils.py  vector_stores.py
src/lib/: Navbar.svelte  Select.svelte  Select.test.svelte  auth.ts  backend_fetch.ts  form.css  matchers.d.ts  navbar.test.ts  reset.css  select.test.ts  test_utils.ts
src/lib/drizzle/: generate_zod.ts  index.ts  schema.ts  zod.ts
src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
src/routes/api/shape/: +server.ts  shape.test.ts
src/routes/auth/: auth.test.ts
src/routes/auth/confirm/: +server.ts
src/routes/auth/login/: +page.server.ts  +page.svelte  schema.ts
src/routes/auth/logout/: +server.ts
src/routes/auth/signup/: +page.server.ts  +page.svelte  schema.ts
supabase/: config.toml
supabase/migrations/: 20241227210411_vector_stores.sql
supabase/schemas/: vector_stores.sql
supabase/templates/: confirmation.html
