[project]
name = "aigis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bitbloxhub", email = "45184892+bitbloxhub@users.noreply.github.com" }
]
dependencies = [
    "mypy>=1.13.0",
    "fastapi[standard]>=0.115.5",
    "supabase>=2.10.0",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jedi>=0.19.2",
]

[tool.ruff]
format.indent-style = "tab"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aigis"]
