[project]
name = "aigis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bitbloxhub", email = "45184892+bitbloxhub@users.noreply.github.com" }
]
dependencies = [
    "mypy>=1.13.0",
    "fastapi[standard]>=0.115.5",
    "supabase>=2.10.0",
]
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = true
python-preference = "only-system"
override-dependencies = [
    # Installing this causes issues with Nix because 
    # fastapi writes an program that errors to `bin/fastapi`
    # and this tries to overwrite it, but Nix does not let that happen.
    "fastapi-cli ; sys_platform == 'never'",
]

[dependency-groups]
dev = [
    "jedi>=0.19.2",
    "ruff>=0.8.1",
]

[tool.ruff]
format.indent-style = "tab"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aigis"]
